# joinme

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.dev.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.sqlx/: query-04aba67253e49c4ef10b434d43d38d8fddb14ba96169f835493aea2a35c02968.json  query-1fb9e511a94b875f685118df6f44928e9c811338dddbf767fb609247d4ccd6d5.json  query-2e70e523200fe864b7d5b594617733c67d15993888618bb3176c5f7aa0a4d195.json  query-510aba1a9c36197b104cdc8564d2de95f83b6edc6d69f5e74ccadfd52dce8c5e.json  query-54f67772de470e36219667e0d950b2af7b7c31088adee5b129454ea4c5d931e9.json  query-7368e974a7e63c09160a5b1bb30c12bf170c14c5707eeb94af32c65782137a38.json  query-9aee4fbe7926219af8d70bef1703a501155c189739f590b2f1646735ffcf8f37.json  query-a6a374d9a1578a5b680c0dbc1f235ff37bdd20ea9c256386b1883d36238350bc.json  query-a98392089af643ebbbf1f7080f417800a01de2e2ece653e04ffe848051d14941.json  query-ad0b489442c15a55ada7a8e5b787486d66e6c7a9b29595c01ecbf97f8535cb65.json  query-ad55dbf1823a561d043037e5aa855e0060c00195d3f95805a7c3f5c64072eaf1.json  query-d604818e65d8107e51ea9fa91ac154f2372b627870ee830243ec0a9e88c06109.json  query-dea591a5a031f79d9916590dabd1da3230eb21b1e3322c0ddcb4e4998de82412.json  query-ee11105e8100458b39babd4341e62534167f718aeaf298cf6dcc267bbc3a0a48.json  query-fa411c98bf46875aa96da94f4a269491eebfc8b8195dced06c7b1125492c7011.json
cdk/: .gitignore  package.json  tsconfig.json
joinme-bot/: .env.example  .prettierrc  package.json  tsconfig.json
migrations/: 20241223052229_initial.sql  (+1 more)
(+47 files in other folders)
