[package]
name = "joinme-v2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = { version = "0.51.0", default-features = false }
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.51.0"
tracing = "0.1.37"
tokio = "1.43.0"

shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.3", features = ["chrono", "uuid"] }
serde = "1.0.217"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing-loki = "0.2.6"
base64 = "0.22.1"
url = "2.5.4"
